# eprempy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: cli.md  extended-usage.ipynb  readme-usage.ipynb  readme-usage.md  usage-scratch.ipynb
examples/data/: with-dist  with-flux
scripts/: default-parameters.py
src/eprempy/: __init__.py  __main__.py  _project_main.py  aliased.py  atomic.py  cli.py  container.py  eprem.py  etc.py  exceptions.py  interfaces.py  paths.py  project.py  reference.py  typehelp.py  universal.py
tests/: conftest.py  run  support.py  test_aliased.py  test_atomic.py  test_base.py  test_container.py  test_eprem.py  test_etc.py  test_exceptions.py  test_import_all.py  test_observable.py  test_observer.py  test_paths.py  test_reference.py  test_symbolic.py  test_universal.py
tests/test_cli/: result-diff.txt  test_configfile.py
tests/test_datafile/: test_core.py  test_interfaces.py  test_viewers.py
tests/test_dataset/: test_core.py  test_interfaces.py  test_viewers.py
tests/test_measured/: test_objects.py  test_sequence.py  test_value.py
tests/test_metric/: test_conversions.py  test_dimensions.py  test_functions.py  test_named_unit.py  test_reference.py  test_systems.py  test_units.py
tests/test_numeric/: conftest.py  test_array.py  test_data.py  test_dimensions.py  test_index.py  test_mixins.py  test_objects.py  test_operations.py
tests/test_parameter/: conftest.py  sample.cfg  test_config.py  test_runtime.py  test_src.py
(+94 files in other folders)
