[tool.poetry]
name = "eprempy"
version = "0.5.2"
description = "Tools for working with EPREM simulation runs"
authors = ["Matt Young"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.26.0"
matplotlib = ">=3.6.0"
scipy = ">=1.7.3"
netCDF4 = ">=1.5.8"
typing-extensions = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^8.3.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "term: marks tests for algebraic terms",
    "expression: marks tests for algebraic expressions",
]

